[tool.poetry]
name = "capstone-project"
version = "0.1.0"
description = "This is the capstone project"
authors = ["Indraneel.Deodhar <ideodhar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
#tensorflow-io-gcs-filesystem = "0.31.0"
#tensorflow = "2.10.0"
pandas = "^2.2.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
